@@ -1,5 +1,7 @@
 2008-06-11  Marius Vollmer  <marius.vollmer@nokia.com>
 
+	* src/util.cc (package_info_func): Hide epoch of version (N86191).
+
 	* src/apt-worker.cc (AptWorker::Initialize): Add "--force-optold"
 	to dpkg options.
 
